--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -35,3 +35,35 @@
     font-family: 'STIX Two Math', serif;
     font-size: 28px;
 }
+
+@media screen and (max-width: 1025px) {
+    
+    .gallery {
+        height: 500px;
+    }
+
+}
+
+@media screen and (max-width: 767px) {
+    
+    .gallery {
+        height: 100%;
+        flex-wrap: wrap;
+    }
+
+    .gallery__small {
+        width: 100%;
+        height: 320px;
+    }
+    
+    .gallery__bag {
+        width: 100%;
+        height: 320px;
+    }
+    
+    .gallery__big {
+        width: 100%;
+        height: 320px;
+    }
+
+}
