--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,6 +9,7 @@
     left: 0;
     right: 0;
     z-index: 100;
+    flex-wrap: wrap;
 }
 
 .header span {
@@ -34,4 +35,77 @@
 
 .header__nav a:hover {
     color: white;
+}
+
+.header__menu {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 12px;
+    width: 50px;
+    height: 50px;
+    background: black;
+    border: 1px solid white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.header__menu-stripe {
+    background: white;
+    height: 3px;
+    width: 100%;
+}
+
+.header__socials {
+    width: 100%;
+    height: 35px;
+    display: none;
+}
+
+.header__socials-item {
+    display: block;
+    width: 35px;
+    height: 100%;
+    margin-right: 15px;
+}
+
+.header__socials-facebook {
+    background: no-repeat center/cover url('./fb.webp');
+}
+
+.header__socials-twitter {
+    background: no-repeat center/cover url('./tw.webp');
+}
+
+.header__socials-instagram {
+    background: no-repeat center/cover url('./in.webp');
+}
+
+@media screen and (max-width: 1050px) {
+    
+    .header {
+        background-color: black;
+        position: relative;
+    }
+
+    .header__nav {
+        display: none;
+    }
+
+    .header__menu {
+        display: flex;
+    }
+
+    .header__socials {
+        display: flex;
+    }
+
+}
+
+@media screen and (max-width: 426px) {
+    
+    .header h3 {
+        font-size: 22px;
+    }
+
 }
