--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: rgba(0,0,0, 0.7);
+    background-color: rgba(20,20,20, 0.7);
     padding: 2% 4%;
     display: flex;
     justify-content: space-between;
@@ -79,6 +79,40 @@
 
 .header__socials-instagram {
     background: no-repeat center/cover url('./in.webp');
+}
+
+.header__popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    align-items: center;
+    flex-direction: column;
+    font-size: 24px;
+    padding-top: 60px;
+}
+
+.header__popup.header__popup_active {
+    display: flex;
+}
+
+.header__popup p {
+    margin-bottom: 15px;
+}
+
+.header__popup-button {
+    background: black;
+    font-size: 40px;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 20px;
+    left: 70%;
+    border: none;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 1050px) {
