--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -42,12 +42,14 @@
 }
 
 .card p {
-    margin: 15px 0;
+    margin: 15px auto;
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
 }
 
 .card__cost {
     font-size: 16px;
-    margin: 0 20px;
 }
 
 .card__inner h3 {
